--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
      <head>
           <meta charset="utf-8"/>
-          <title>Werewolf</title>
+          <title>MukokoMaster</title>
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
           <link rel="stylesheet" href="css/style.css"/>
           <link rel="icon" href="favicon.png"/>
@@ -17,13 +17,12 @@
           <div class="container">
                <!-- This is the first "page"  -->
                <div id="introView">
-                    <h2 id="mainTitle"> Werewolf </h2>
+                    <h2 id="mainTitle"> MukokoMaster (PP Comunity) </h2>
                     <p id="loginErr">Erros appear here <p>
                     <form id="usernameForm">
                          <input id="userInput" class="form-group" type="text" placeholder="Enter a username to join the lobby" autocomplete="off" autofocus/>
                     </form>
-                    <p id="whatIs">Werewolf is a multiplayer game where each player is assigned a role, and the village folk must identify the murderous werewolfs
-                          before it is too late! Read the full rules <a href="https://www.playwerewolf.co/rules/">here</a>.</p>
+                    <p id="whatIs">Mukokomaster ByPhoenix tarafindan gelistirilen, Daha tamamlanmamis bir parti oyunudur. Daha Tamamlanmadigi icin oyun normal Katil oyunu gibi sorunsuz calismaktadir, ozel karakterler: Mukokomaster (Katil) , ErenOkten (Vigi) , Villager. Detayli bilgi <a href="https://ins.egemen.club/">Burda</a>.</p>
                </div>
 
 
